--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,26 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+			            <groupId>org.sonarsource.scanner.maven</groupId>
+			            <artifactId>sonar-maven-plugin</artifactId>
+			            <version>3.7.0.1746</version> <!-- Replace with the latest version -->
+                         </plugin>
 		</plugins>
 		<finalName>springboot-docker-demo</finalName>
 	</build>
+	<profiles>
+		<profile>
+			<id>sonar</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<sonar.host.url>
+					http://localhost:9000
+				</sonar.host.url>
+			</properties>
+		</profile>
+	</profiles>
 
 </project>
